# genai_bootcamp_projects

./: .env.example  .gitignore  README.md  requirements.txt
week_1/: README.md  app_config.py  main.py  model_util.py  requirements.txt  streamlit_app.py
week_3/: .env.example  README.md  app.py  requirements.txt
week_3/config/: settings.py
week_3/core/: embedding_utils.py  embeddings.py  llm.py  storage.py
week_3/modules/news_summarizer/: articleloader.py
week_3/pages/: document_summarizer.py  news_article_summarizer.py  welcome_page.py  youtube_summarizer.py
week_3/summarizer/news_summarizer/: articleloader.py  summarizer.py
week_3/summarizer/pdf_summarizer/: summarizer.py
week_3/summarizer/unstructured_data_summarizer/: summarizer.py
week_3/summarizer/youtube_summarizer/: summarizer.py
week_3/utils/: model_util.py  voice_util.py
week_4/: .gitignore  README.md  main.py  pyproject.toml
week_4/src/graphs/: graph.py
week_4/src/models/: groq.py  openai.py
week_4/src/nodes/: blog.py
week_4/src/states/: blog.py
week_4/src/ui/: display_result.py  load_ui.py
week_4/src/ui/config/: ui_config_file.ini  ui_config_file.py
